# cargo-shell

./: Cargo.toml  Justfile  README.adoc
src/: errors.rs  lib.rs
