[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
description = "Simple command shell for cargo\n"
homepage = "https://github.com/pwoolcoc/cargo-shell"
license = "MIT/Apache-2.0"
name = "cargo-shell"
repository = "https://github.com/pwoolcoc/cargo-shell"
version = "0.1.1"

[[bin]]
name = "cargo-shell"
path = "src/bin/shell.rs"

[dependencies]
cargo = "0.14.0"
env_logger = "0.3.5"
error-chain = "0.7.1"
log = "0.3.6"
rustyline = "1.0.0"

[lib]
name = "shell"
path = "src/lib.rs"
